--- a/flipping_gallery-master/flipping_gallery.css
+++ b/flipping_gallery-master/flipping_gallery.css
@@ -1,3 +1,11 @@
+/*.fg-body {*/
+/*  position: relative;*/
+/*}*/
+
+/*body {*/
+/*  -webkit-transform-style: preserve-3d;*/
+/*   -webkit-backface-visibility: hidden;*/
+/*}*/
 .fg-body {
   position: relative;
 }
